--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= content_for?(:title) ? yield(:title) : 'Хороший программист — счастливчик!' %></title>
+  <title><%= content_for?(:title) ? yield(:title) : 'Будущий программист — счастливчик!' %></title>
   <%= csrf_meta_tags %>
 
   <%= stylesheet_link_tag 'application', :media => 'all' %>
@@ -69,7 +69,7 @@
   </div>
 
   <footer class="buffer-top-lg text-right">
-    <p>&copy; <%= link_to 'Хороший программист', 'http://bit.ly/1U2DVdI' %> 2016 &mdash; &infin;</p>
+    <p>&copy; <%= link_to 'Будущий программист' %> 2019 &mdash; &infin;</p>
   </footer>
 </div>
 
