--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,25 @@
-<h1>Listing Users</h1>
+<h1>Рейтинг</h1>
+<div class= "row">
+<div class="col-md-8 col-md-offset-2">
+  <table class="users-table table">
+    <thead>
+      <th>
+        <th class="text-center">Место</th>
+        <th class="text-center">Имя</th>
+        <th class="text-center">Выигрыш</th>
+        <th class="text-center">Игр</th>
+        <th class="text-center">За игру</th>
+      </th>
+    </thead>
+    <% @users.each_with_index do |user, index| %>
+      <tr class="text-center">
+        <td><%= index + 1 %></td>
+        <td><%= link_to user.name,user_path(user) %></td>
+        <td><%= number_to_currency user.balance %></td>
+        <td><%= user.games.count %></td>
+        <td><%= user.average_prize %></td>
+      </tr>
+    <% end %>  
+  </table>  
+</div>  
+</div>  
