Add partial tests & gem capybara

--- a/app/views/users/_game.html.erb
+++ b/app/views/users/_game.html.erb
@@ -11,7 +11,7 @@
     <%= content_tag :span, fa_icon('phone'),
       class: "label label-primary #{'game-help-used' if game.friend_call_used?}"
     %>
-    <%= content_tag :span, fa_icon('user'),
+    <%= content_tag :span, fa_icon('users'),
       class: "label label-primary #{'game-help-used' if game.audience_help_used?}"
     %>
   </td>
