Add tests for users show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
         <th class="text-center">#</th>
         <th></th>
         <th class= "text-center">Дата</th>
-        <th class= "text-center">Вопос</th>
+        <th class= "text-center">Вопpос</th>
         <th class= "text-center">Выигрыш</th>
         <th class= "text-center">Подсказки</th>
       </tr>
