--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag questions_path, multipert: true do %>
+<%= form_tag questions_path, multipart: true do %>
 
   <div>
     <h3 class="buffer-bottom">
